--- a/src/components/wrapperServices/serviceCard/ServiceCard.module.scss
+++ b/src/components/wrapperServices/serviceCard/ServiceCard.module.scss
@@ -100,11 +100,11 @@
 		transition: color 0.5s, border 0.5s, background-color 0.5s;
 		border: 2px solid rgba(79, 79, 79, 0.817);
 		background-color: rgba(79, 79, 79, 0.817);
-		a {
+		span {
 			color: #ffffff;
 		}
 	}
-	a {
+	span {
 		text-decoration: none;
 		color: rgb(0, 0, 0);
 		font-weight: bold;
