--- a/src/components/ui/popup/styles.module.scss
+++ b/src/components/ui/popup/styles.module.scss
@@ -62,7 +62,7 @@
 	width: 100%;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
-	z-index: 999; /* Наибольший z-index для отображения поверх остального контента */
+	z-index: 999;
 	animation: fadeIn 0.4s ease forwards;
 	&.visible {
 		animation: fadeOut 0.3s ease forwards;
