--- a/src/components/wraperPortfolio/WrapperPortfolio.module.scss
+++ b/src/components/wraperPortfolio/WrapperPortfolio.module.scss
@@ -1,7 +1,7 @@
 @import 'src/assets/styles/variables';
 .wrapperPortfolio {
 	// background-color: rgb(37, 37, 37);
-	padding: 30px 0;
+	padding-top: 30px;
 }
 .container {
 	margin: 0 auto;
@@ -13,7 +13,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 30px;
-	padding-bottom: 50px;
+	padding-bottom: 20px;
 }
 .containerHeader {
 	display: flex;
@@ -42,14 +42,21 @@
 	display: flex;
 	border-radius: 5px;
 	align-items: center;
-	button {
-		padding: 10px 20px;
+	justify-content: end;
+	width: 100%;
+	.button {
+		text-align: center;
+		padding: 20px 20px;
 		border: none;
 		border-radius: 5px;
-		font-size: 25px;
+		font-size: 22px;
 		font-weight: bold;
 		background-color: $accent;
 		color: $black;
+		transition: background-color 0.3s ease;
+		&:hover {
+			background-color: $fontColor;
+		}
 	}
 	p {
 		color: #8f8f8f;
