add page AboutUs

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,11 +4,10 @@ $accent: #ffd622;
 $fontColor: #989898;
 $fontColorAccent: #d3d3d3d9;
 $black: #202020;
+$white: #c9c9c9;
 
-/* https://dribbble.com/shots/17358553-Sportly-Running-Record-Stats-Activity-Log-and-Challenge */
-
-$bx-accent: 0px 8px 13px 11px rgba(47, 47, 47, 0.26);
-$bx-16: 0 3px 6px rgba(0, 0, 0, 0.16);
+$bgdefault: #1c1c1c; // написть цвет
+$bgDefaultAccent: #989898; // написать цвет
 
 $default-font: 'Sofia Sans', sans-serif;
 
