--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -20,7 +20,8 @@
 	padding: 20px 0px;
 }
 .feedbackBlockQuestion {
-	flex: 1 0 50%;
+	flex: 1 0 48%;
+	margin-right: 10px;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
