--- a/src/components/calculator/CalculatorUI.module.scss
+++ b/src/components/calculator/CalculatorUI.module.scss
@@ -8,6 +8,7 @@
 .containerHeader {
 	display: flex;
 	flex-direction: column;
+	padding: 0px 10px;
 	.contentHeaderTitle {
 		font-size: 25px;
 		color: #ffd622;
@@ -47,13 +48,12 @@
 	padding: 20px;
 	flex-direction: column;
 	gap: 16px;
-	flex: 1 0 48%;
-	margin: 0 auto;
-	border-radius: 4px;
-	align-items: center;
 }
 
 .calculatorForm {
+	border-radius: 5px;
+	padding: 10px 20px;
+	background: #212121;
 	.blockTypeServices {
 		margin-bottom: 10px;
 		.typeServices {
@@ -70,26 +70,6 @@
 		font-size: 20px;
 		font-weight: bold;
 		color: #646464;
-	}
-
-	& input[type='range'] {
-		display: block;
-		width: 100%;
-		padding: 8px;
-		border: 1px solid #ccc;
-		border-radius: 4px;
-		font-size: 14px;
-		line-height: 1.5;
-		color: #333;
-
-		&:focus {
-			outline: none;
-			box-shadow: 0 0 4px 1px #333;
-		}
-	}
-
-	& input[type='radio'] {
-		margin-right: 8px;
 	}
 
 	& button[type='button'] {
@@ -127,12 +107,59 @@
 		justify-content: space-between;
 	}
 }
+
+.rangeOfRoomBlock {
+	margin-top: 10px;
+	margin-bottom: 20px;
+	label {
+		margin-bottom: 10px;
+		span {
+			color: $accent;
+		}
+	}
+	.customRange {
+		position: relative;
+		width: 100%;
+		height: 10px;
+		border-radius: 5px;
+		background-color: $fontColor;
+
+		.input {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+			appearance: none;
+			background-color: transparent;
+			border: none;
+			outline: none;
+			&::-webkit-slider-thumb {
+				-webkit-appearance: none;
+				appearance: none;
+				width: 20px;
+				height: 20px;
+				background: $accent;
+				border-radius: 50%;
+				cursor: pointer;
+			}
+		}
+		.fill {
+			position: absolute;
+			height: 100%;
+			background-color: $accent;
+			border-radius: 5px;
+			transition: width 0.01s;
+		}
+	}
+}
+
 .numberOfRoomsBlock {
 	display: flex;
 	margin-bottom: 10px;
 	.containerNumberOfRooms {
 		display: flex;
-		justify-content: space-between;
+		gap: 50px;
 		width: 100%;
 		.numberOfRoomsItem {
 			display: flex;
