--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,8 +6,10 @@ $fontColorAccent: #d3d3d3d9;
 $black: #202020;
 $white: #c9c9c9;
 
-$bgdefault: #1c1c1c; // написть цвет
+$bgdefault: hsla(0, 0%, 11%, 0.85); // написть цвет
 $bgDefaultAccent: #989898; // написать цвет
+
+$bgDefaultAccentBlock: #14141473;
 
 $default-font: 'Sofia Sans', sans-serif;
 
