--- a/src/components/wrapperServices/WrapperServices.module.scss
+++ b/src/components/wrapperServices/WrapperServices.module.scss
@@ -27,7 +27,7 @@
 }
 .containerContentHeader {
 	position: relative;
-	background-color: #2727273b;
+	background-color: $bgDefaultAccentBlock;
 	padding: 20px;
 	border-radius: 5px;
 	img {
