--- a/src/components/calculator/CalculatorUI.module.scss
+++ b/src/components/calculator/CalculatorUI.module.scss
@@ -1,9 +1,8 @@
 @import 'src/assets/styles/variables';
 .containerCalculator {
 	display: flex;
-	background-color: $bgdefault;
+	background-color: $bgDefaultAccentBlock;
 	border-radius: 10px;
-	gap: 10px;
 }
 .containerHeader {
 	display: flex;
@@ -20,11 +19,57 @@
 	}
 }
 
+.rangeOfRoomBlock {
+	margin-top: 10px;
+	margin-bottom: 20px;
+	label {
+		margin-bottom: 10px;
+		span {
+			color: $accent;
+		}
+	}
+	.customRange {
+		position: relative;
+		width: 100%;
+		height: 10px;
+		border-radius: 5px;
+		background-color: $fontColor;
+
+		.input {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+			appearance: none;
+			background-color: transparent;
+			border: none;
+			outline: none;
+			&::-webkit-slider-thumb {
+				-webkit-appearance: none;
+				appearance: none;
+				width: 20px;
+				height: 20px;
+				background: $accent;
+				border-radius: 50%;
+				cursor: pointer;
+			}
+		}
+		.fill {
+			position: absolute;
+			height: 100%;
+			background-color: $accent;
+			border-radius: 5px;
+			transition: width 0.01s;
+		}
+	}
+}
+
 .calculatorActionFormBlock {
 	flex: 1 0 48%;
-	// background-color: $bgDefaultAccent;
-	// border-radius: 10px;
-	margin: 20px;
+	background-color: $bgDefaultAccentBlock;
+	border-radius: 10px;
+	padding: 20px;
 	.containerHeaderForm {
 		display: flex;
 		flex-direction: column;
@@ -46,16 +91,12 @@
 	display: flex;
 	padding: 20px;
 	flex-direction: column;
+	background-color: $bgDefaultAccentBlock;
 	gap: 16px;
-	flex: 1 0 48%;
-	margin: 0 auto;
-	border-radius: 4px;
-	align-items: center;
 }
 
 .calculatorForm {
 	.blockTypeServices {
-		margin-bottom: 10px;
 		.typeServices {
 			display: flex;
 			gap: 10px;
@@ -98,7 +139,7 @@
 		border: none;
 		border-radius: 4px;
 		background-color: #333;
-		color: #fff;
+		color: $fontColorAccent;
 		font-size: 14px;
 		font-weight: bold;
 		cursor: pointer;
@@ -132,7 +173,7 @@
 	margin-bottom: 10px;
 	.containerNumberOfRooms {
 		display: flex;
-		justify-content: space-between;
+		gap: 50px;
 		width: 100%;
 		.numberOfRoomsItem {
 			display: flex;
@@ -145,7 +186,8 @@
 				border-radius: 5px;
 				background-color: #333;
 				span {
-					color: $bgdefault;
+					font-size: 25px;
+					color: $fontColorAccent;
 				}
 				button {
 					background-color: #333;
