--- a/src/components/calculator/checkBoxButton/CheckBoxButton.module.scss
+++ b/src/components/calculator/checkBoxButton/CheckBoxButton.module.scss
@@ -19,7 +19,7 @@
 
 		&.checked {
 			background-color: $accent;
-			color: white;
+			color: rgb(7, 7, 7);
 		}
 	}
 
@@ -29,6 +29,6 @@
 
 	input[type='checkbox']:checked + button {
 		background-color: $accent;
-		color: white;
+		color: rgb(0, 0, 0);
 	}
 }
