--- a/src/components/landingPage/wrapperAdvantage/WrapperAdvantage.module.scss
+++ b/src/components/landingPage/wrapperAdvantage/WrapperAdvantage.module.scss
@@ -32,7 +32,7 @@
 	line-height: 1;
 	font-weight: bold;
 	color: $accent;
-	background-color: #2727273b;
+	background-color: $bgDefaultAccentBlock;
 	padding: 20px;
 	width: 100%;
 	z-index: 4;
@@ -59,7 +59,7 @@
 	border-radius: 10px;
 	padding: 20px;
 	flex-direction: column;
-	background-color: #2727273b;
+	background-color: $bgDefaultAccentBlock;
 }
 
 .containerItem img {
