--- a/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
+++ b/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
@@ -1,18 +1,20 @@
-.carousel {
-	margin: 0px !important;
-	padding: 20px;
-	// border: 2px solid #616161;
+@import 'src/assets/styles/variables';
+.carouselTeam {
 	border-radius: 10px;
+	.slick-slide > div {
+		margin: 0px 10px;
+	}
 }
 
-.carousel-itemTeam {
+.carouselItemTeam {
 	position: relative;
 	border-radius: 10px;
-	padding: 10px;
-	background-color: rgb(69, 69, 69);
+	background-color: $bgDefaultAccentBlock;
 	height: 400px;
 	cursor: pointer;
-	// margin-bottom: 50px;
+	background-image: url('/public/static/DSC08377.jpg');
+	background-size: cover; /* чтобы изображение занимало всю доступную область */
+	background-position: center;
 }
 .carouselTitle {
 	color: #d9d932;
@@ -26,15 +28,27 @@
 	height: 50px;
 	background-color: rgb(171, 171, 171);
 	border-radius: 10px;
+	border-radius: 10px;
 }
 
 .carouselDescription {
-	margin-top: 20px;
-	font-size: 8px;
-}
-
-.slick-slide > div {
-	margin: 20px 40px;
+	color: $accent;
+	font-weight: 800;
+	font-size: 15px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: end;
+	border-radius: 10px;
+	.item {
+		border-radius: 10px;
+		padding: 10px;
+		backdrop-filter: blur(10px);
+		background-color: $bgdefault;
+		span {
+			color: $fontColorAccent;
+		}
+	}
 }
 
 .slick-dots {
