--- a/src/components/wraperPortfolio/sliderMain/SliderMain.module.scss
+++ b/src/components/wraperPortfolio/sliderMain/SliderMain.module.scss
@@ -1,19 +1,51 @@
 .sliderContainer {
-	button {
+	.browseIcon {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		transition: background-color 0.3s ease;
+		cursor: pointer;
+		&::after {
+			content: url('/public/static/slider/browseSlider.svg');
+			position: absolute;
+			top: 10px;
+			left: 10%;
+			top: 35%;
+			left: 40%;
+			opacity: 0;
+			width: 12px;
+			height: 12px;
+			transition: opacity 0.3s ease;
+		}
+
+		&:hover {
+			background-color: rgba(0, 0, 0, 0.64);
+
+			&::after {
+				opacity: 1;
+			}
+		}
+	}
+	.arrowSlider {
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
-		background-color: rgba(0, 0, 0, 0.5); /* Прозрачный черный цвет кнопок */
+		background-color: rgba(0, 0, 0, 0);
 		color: white;
 		border: none;
-		padding: 10px 20px;
+		padding: 0px 0px;
 		cursor: pointer;
 		border-radius: 4px;
 		margin-left: 10px;
+		img {
+			width: 40px;
+			height: 100px;
+		}
 	}
 
 	button:hover {
-		background-color: rgba(0, 0, 0, 0.7); /* Цвет кнопок при наведении */
+		background-color: rgba(0, 0, 0, 0); /* Цвет кнопок при наведении */
 	}
 
 	button:first-child {
