--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -42,29 +42,29 @@
 	opacity: 1;
 }
 
-// html,
-// body {
-// 	background: -webkit-linear-gradient(
-// 		89deg,
-// 		#000000,
-// 		#171717,
-// 		#262727,
-// 		#171717,
-// 		#000000
-// 	); /* Chrome 10-25, Safari 5.1-6 */
-// 	background: linear-gradient(
-// 		89deg,
-// 		#000000,
-// 		#171717,
-// 		#262727,
-// 		#171717,
-// 		#000000
-// 	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-// }
+html,
+body {
+	background: -webkit-linear-gradient(
+		89deg,
+		#000000,
+		#171717,
+		#262727,
+		#171717,
+		#000000
+	); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(
+		89deg,
+		#000000,
+		#171717,
+		#262727,
+		#171717,
+		#000000
+	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
 body {
 	height: 100%;
-	background-color: #000000;
+	// background-color: #000000;
 	padding: 0;
 	margin: 0;
 	color: #fff;
