--- a/src/components/calculator/checkBoxButton/CheckBoxButton.module.scss
+++ b/src/components/calculator/checkBoxButton/CheckBoxButton.module.scss
@@ -3,8 +3,7 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	margin: 10px 0px;
-
+	border-bottom: 1px solid $white;
 	.buttonWrapper {
 		margin-bottom: 10px;
 	}
@@ -13,13 +12,17 @@
 		padding: 10px 20px;
 		margin-right: 10px;
 		border: none;
+		font-weight: 800;
 		cursor: pointer;
 		outline: none;
-		background-color: #f0f0f0;
-
+		color: $white;
+		background-color: $bgdefault;
 		&.checked {
 			background-color: $accent;
 			color: rgb(7, 7, 7);
+		}
+		&:hover {
+			color: $black;
 		}
 	}
 
