--- a/src/components/landingPage/wrapperStageWork/WrapperStagesWork.module.scss
+++ b/src/components/landingPage/wrapperStageWork/WrapperStagesWork.module.scss
@@ -22,7 +22,7 @@
 	line-height: 1;
 	font-weight: bold;
 	color: $accent;
-	background-color: #2727273b;
+	background-color: $bgDefaultAccentBlock;
 	padding: 20px;
 	width: 100%;
 	z-index: 4;
@@ -49,7 +49,7 @@
 
 .line {
 	flex-grow: 1;
-	height: 2px;
+	height: 3px;
 	background-color: rgb(80, 80, 80);
 }
 
@@ -59,16 +59,21 @@
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	background-color: rgb(69, 69, 69);
+	background-color: $bgDefaultAccent;
+	font-weight: 800;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: white;
+	color: $fontColorAccent;
 	font-size: 16px;
 	transition: background-color 0.5s ease;
 	p {
+		color: $bgdefault;
 		position: absolute;
 		top: -30px;
+		&:hover {
+			color: $black;
+		}
 	}
 }
 
@@ -78,16 +83,21 @@
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	background-color: #d9d932;
+	background-color: $accent;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: white;
+	color: $fontColorAccent;
+	font-weight: 800;
 	font-size: 16px;
 	transition: background-color 0.5s ease;
 	p {
+		font-weight: 800;
 		position: absolute;
 		top: -30px;
+		&:hover {
+			color: $black;
+		}
 	}
 }
 
@@ -102,13 +112,15 @@
 
 .WrapperDescription {
 	flex: 1 0 80%;
-	background-color: rgb(67, 67, 67);
+	font-weight: 800;
+	color: $fontColorAccent;
+	background-color: $bgDefaultAccentBlock;
 	border-radius: 10px;
 	padding: 20px;
 }
 
 .descriptionTitle {
-	font-size: 20px;
+	font-size: 22px;
 	transition: opacity 0.5s ease;
 	&.hide {
 		opacity: 1;
