--- a/src/components/screens/contacts/contactsPage/ContactsPage.module.scss
+++ b/src/components/screens/contacts/contactsPage/ContactsPage.module.scss
@@ -152,6 +152,7 @@
 		background-color: $bgdefault;
 		border-radius: 10px;
 		margin-top: 20px;
+		padding: 20px;
 	}
 	.containerContactsFormCart {
 		flex: 1 0 33%;
