--- a/src/components/screens/portfolio/portfolioScreen/portfolioItem/PortfolioItem.module.scss
+++ b/src/components/screens/portfolio/portfolioScreen/portfolioItem/PortfolioItem.module.scss
@@ -17,7 +17,7 @@
 	overflow: hidden;
 	width: 100%;
 	border-radius: 10px;
-	height: 200px; /* Высота блока, подставьте нужное значение */
+	height: 200px;
 	img {
 		width: 100%;
 		height: 100%;
