--- a/src/components/ui/formFeedback/FormFeedback.module.scss
+++ b/src/components/ui/formFeedback/FormFeedback.module.scss
@@ -5,12 +5,14 @@
 	flex-direction: column;
 	gap: 16px;
 	margin: 0 auto;
-	padding: 20px;
 	border-radius: 10px;
 
+	.contactMetodBlock {
+		display: flex;
+		gap: 10px;
+	}
 	& label {
 		display: block;
-		margin-bottom: 8px;
 		font-size: 14px;
 		font-weight: bold;
 		color: $bgDefaultAccent;
@@ -43,24 +45,31 @@
 		margin-right: 8px;
 	}
 
-	& button[type='submit'] {
-		display: block;
-		padding: 8px 16px;
-		border: none;
+	.headerCheckBox {
+	}
+	.postData {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+		background-color: $bgdefault;
+		color: $white;
+		font-weight: 800;
+		padding: 10px 20px;
 		border-radius: 4px;
-		background-color: #333;
-		color: #fff;
-		font-size: 14px;
-		font-weight: bold;
+		font-size: 16px;
 		cursor: pointer;
-
+		transition: background-color 0.3s ease;
+		border: none;
+		transition: all 0.3s;
 		&:hover {
-			background-color: #444;
+			background-color: $accent;
+			color: $black;
 		}
 
-		&:disabled {
-			background-color: #ccc;
-			cursor: not-allowed;
+		&:active,
+		&:focus {
+			background-color: #e5e5e5;
+			box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
 		}
 	}
 }
