--- a/src/components/ui/popup/styles.module.scss
+++ b/src/components/ui/popup/styles.module.scss
@@ -1,3 +1,4 @@
+@import 'src/assets/styles/variables';
 @keyframes fadeIn {
 	from {
 		opacity: 0;
@@ -70,15 +71,16 @@
 }
 
 .modal-content {
-	background-color: #363636;
-	padding: 30px 50px;
+	background-color: $bgDefaultAccentBlock;
+	padding: 20px 30px;
 	border-radius: 5px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	position: relative;
 	width: 500px;
 	.feedbackFormTitle {
 		font-size: 30px;
-		color: #c7b03cd5;
+		font-weight: 800;
+		color: $accent;
 	}
 	.feedbackFormSubtitle {
 		color: white;
@@ -93,37 +95,5 @@
 		cursor: pointer;
 		font-size: 20px;
 		color: #d0d0d0;
-	}
-
-	form {
-		display: flex;
-		flex-direction: column;
-
-		label {
-			margin-bottom: 10px;
-		}
-
-		input {
-			width: 100%;
-			padding: 5px;
-			border: 1px solid #5b5b5b;
-			border-radius: 3px;
-			padding: 10px 15px;
-			background-color: #404040;
-		}
-
-		button {
-			padding: 15px 10px;
-			background-color: #c7b03cd5;
-			color: #1d1d1d;
-			border: none;
-			border-radius: 3px;
-			cursor: pointer;
-			transition: all 0.3s ease;
-			&:hover {
-				color: #9e9e9e;
-				background-color: #404040;
-			}
-		}
 	}
 }
