--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -1,8 +1,6 @@
 @import 'src/assets/styles/variables';
 .homeBanner {
-	padding: 40px 0px 30px 0px;
-	// background-color: hsla(0, 0%, 11%, 0.393);
-	// backdrop-filter: blur(5px);
+	padding: 40px 0px 40px 0px;
 }
 
 .bannerContainer {
@@ -22,17 +20,14 @@
 	flex: 1 1 25%;
 	h1 {
 		position: relative;
-		top: -26px;
-		width: 137%;
+		width: 100%;
 		z-index: 4;
 		border-radius: 10px;
-		font-size: 60px;
-		padding: 10px;
+		font-size: 51px;
 		line-height: 1;
 		font-weight: bold;
 		color: #989898;
 		margin-bottom: 82px;
-		// background-color: rgba(109, 109, 109, 0.6392156863);
 		backdrop-filter: blur(10px);
 		span {
 			color: $accent;
@@ -56,15 +51,13 @@
 
 .titleAction {
 	display: flex;
-	background-color: #1c1c1c;
+	background-color: $bgDefaultAccentBlock;
 	border-radius: 8px;
 	align-items: center;
 	gap: 10px;
 	margin-top: 5px;
-	width: 110%;
+	width: 100%;
 	z-index: 40;
-	// background-color: rgba(109, 109, 109, 0.6392156863);
-	backdrop-filter: blur(10px);
 	button {
 		padding: 15px 15px;
 		border: none;
@@ -91,12 +84,11 @@
 	z-index: 40;
 	display: flex;
 	gap: 5px;
+	background-color: $bgDefaultAccentBlock;
 	border-radius: 10px;
 	font-size: 1.5em;
 	padding: 10px;
-	width: 120%;
-	// background-color: #6d6d6da3;
-	backdrop-filter: blur(10px);
+	width: 100%;
 	img {
 		width: 30px;
 		height: 30px;
