--- a/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
+++ b/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
@@ -1,5 +1,6 @@
 @import 'src/assets/styles/variables';
 .carouselTeam {
+	margin: 0 40px;
 	border-radius: 10px;
 	.slick-slide > div {
 		margin: 0px 10px;
