--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -4,31 +4,14 @@
 	position: sticky;
 	z-index: 100;
 	top: 0;
-	// backdrop-filter: blur(10px);
-	// background-color: #00000054;
 	backdrop-filter: blur(6px);
-	background: -webkit-linear-gradient(
-		89deg,
-		rgba(0, 0, 0, 0.9),
-		rgba(23, 23, 23, 0.9),
-		rgba(38, 39, 39, 0.9),
-		rgba(23, 23, 23, 0.9),
-		rgba(0, 0, 0, 0.9)
-	);
-	background: linear-gradient(
-		89deg,
-		rgba(0, 0, 0, 0.9),
-		rgba(23, 23, 23, 0.9),
-		rgba(38, 39, 39, 0.9),
-		rgba(23, 23, 23, 0.9),
-		rgba(0, 0, 0, 0.9)
-	);
+	background: $bgblur;
+	background: $bgblurIO;
 }
 
 .headerWrapper {
 	margin: 0 auto;
 	max-width: 1280px;
-	border-radius: 10px;
 }
 
 .headerContainer {
@@ -36,7 +19,7 @@
 	justify-content: space-between;
 	align-items: center;
 	color: $white;
-	padding: 10px 0px;
+	padding: 0.8vw 0;
 }
 
 .logoContainer {
@@ -47,20 +30,15 @@
 	text-decoration: none;
 	color: inherit;
 	img {
-		width: 40px;
-		height: 40px;
-		svg {
-			path {
-				stroke: #c6aa2dff;
-			}
-		}
+		width: 2.5vw;
+		height: 2.5vw;
 	}
 }
 
 .title {
 	line-height: 1;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 1.5vw;
 	color: $fontColor;
 }
 .activeUrl {
@@ -69,82 +47,66 @@
 	}
 }
 
-.menu {
-	ul {
-		display: flex;
-		font-size: 16px;
-		li {
-			margin-right: 20px;
-			a {
-				text-decoration: none;
-				color: $fontColor;
-				font-weight: bold;
-				transition: color 0.3s;
-				&.active {
-					color: #ffd622;
-				}
-			}
-
-			a:hover {
-				color: #ffd622;
-			}
-		}
-	}
-}
-.dropdown {
+.burgerMenuButton {
 	position: relative;
-	.dropdownToggle {
-		color: #858585;
-		font-weight: bold;
-		cursor: pointer;
-		&:hover {
-			color: #ffd622;
-		}
-	}
-	.submenu {
+	width: 30px;
+	height: 20px;
+	background: transparent;
+	cursor: pointer;
+	display: block;
+	input {
 		display: none;
-		position: absolute;
-		top: 100%;
-		left: -20px;
-		width: 300px;
-		z-index: 100;
-		border-radius: 10px;
-		backdrop-filter: blur(10px);
-		background-color: #1f1f1fe7;
-
-		li {
-			padding: 0px 20px;
-			margin-bottom: 10px;
-			margin-top: 10px;
-
-			a {
-				color: #cdcdcd;
-				font-size: 16px;
-				font-weight: 800;
-			}
-		}
 	}
-	&:hover .submenu {
+	span {
 		display: block;
+		position: absolute;
+		height: 4px;
+		width: 100%;
+		background: $fontColor;
+		border-radius: 9px;
+		opacity: 1;
+		left: 0;
+		transform: rotate(0deg);
+		transition: 0.25s ease-in-out;
+	}
+	span:nth-of-type(1) {
+		top: 0px;
+		transform-origin: left center;
+	}
+	span:nth-of-type(2) {
+		top: 50%;
+		transform: translateY(-50%);
+		transform-origin: left center;
+	}
+	span:nth-of-type(3) {
+		top: 100%;
+		transform-origin: left center;
+		transform: translateY(-100%);
+	}
+	input:checked ~ span:nth-of-type(1) {
+		transform: rotate(45deg);
+		top: 0px;
+		left: 5px;
+	}
+	input:checked ~ span:nth-of-type(2) {
+		width: 0%;
+		opacity: 0;
+	}
+	input:checked ~ span:nth-of-type(3) {
+		transform: rotate(-45deg);
+		top: 21px;
+		left: 5px;
 	}
 }
 
-.containerContact {
-	display: flex;
-	flex-direction: column;
-	p {
-		font-size: 18px;
-		color: $fontColorAccent;
-		font-weight: 700;
+@media only screen and (min-width: 1024px) and (max-width: 1279px) {
+	.headerWrapper {
+		margin: 0.2vw 1.2vw;
 	}
 }
-.contactblok {
-	display: flex;
-	align-items: center;
-	gap: 2px;
-	font-size: 15px;
-	img {
-		width: 18px;
-		height: 18px;
+@media only screen and (min-width: 768px) and (max-width: 1023px),
+	only screen and (max-width: 767px) {
+	.headerContainer {
+		padding: 0.2vw 1.2vw;
 	}
 }
