--- a/src/components/wrapperReviews/carousel/Carousel.scss
+++ b/src/components/wrapperReviews/carousel/Carousel.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/styles/variables';
 .carouselReviews {
-	// margin: 10px 20px;
+	margin: 0px 40px;
 	.carouselItemReviews {
 		position: relative;
 		border-radius: 10px;
@@ -104,7 +104,8 @@
 	.leftButton,
 	.rightButton {
 		position: absolute;
-		top: 50%;
+		left: 50%;
+		// top: 50%;
 		transform: translateY(-50%);
 		width: 40px;
 		height: 40px;
