--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -96,7 +96,7 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
 	.homeBanner {
-		padding: 3vw 0vw;
+		padding: 2vw 0vw;
 	}
 	.bannerInfo {
 		display: flex;
@@ -115,6 +115,7 @@
 	.bannerAdvantages {
 		flex-direction: row;
 		flex-wrap: wrap;
+
 		.advantageItem {
 			flex: 1 0 33%;
 		}
@@ -129,16 +130,11 @@
 }
 
 @media only screen and (max-width: 767px) {
-	.bannerContainer {
-		margin: 0 2vw;
+	.homeBanner {
+		padding: 5vw 0vw;
 	}
-	.bannerInfo {
-		display: flex;
-		flex-direction: column;
-		gap: 0.5vw;
-		h1 {
-			font-size: 7.125vw;
-		}
+	.bannerContainer {
+		margin: 0 6vw;
 	}
 	.bannerInfo {
 		display: flex;
@@ -150,22 +146,48 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		h1 {
-			font-size: 7.125vw;
-			margin-bottom: 2vw;
+			font-size: 8.125vw;
+			margin-bottom: 6vw;
 		}
 	}
 	.bannerAdvantages {
 		flex-direction: row;
 		flex-wrap: wrap;
+		gap: 5px;
 		.advantageItem {
-			flex: 1 0 45%;
+			flex: none;
+		}
+	}
+	.advantageItem {
+		display: flex;
+		background-color: $bgDefaultAccentBlock;
+		border-radius: 2.8vw;
+		padding: 4.8vw;
+		width: 100%;
+		gap: 3pvw;
+		img {
+			position: relative;
+			top: -0.7vw;
+			width: 5.5vw;
+			height: 5.5vw;
+			margin-right: 5px;
 		}
 	}
 
 	.advantageDescriptionMain {
-		font-size: 2.5vw;
+		font-size: 4.5vw;
+		margin-bottom: 1.5vw;
 	}
 	.advantageDescription {
-		font-size: 1.5vw;
+		font-size: 2.5vw;
+	}
+	.titleAction {
+		flex-wrap: wrap;
+		p {
+			padding: 10px;
+			font-size: 5vw;
+			line-height: 1.5;
+			width: 100%;
+		}
 	}
 }
