--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -131,7 +131,7 @@
 
 @media only screen and (max-width: 767px) {
 	.homeBanner {
-		padding: 5vw 0vw;
+		padding: 30px 0px 40px 0px;
 	}
 	.bannerContainer {
 		margin: 0 6vw;
@@ -147,7 +147,7 @@
 		flex-wrap: wrap;
 		h1 {
 			font-size: 8.125vw;
-			margin-bottom: 6vw;
+			margin-bottom: 50px;
 		}
 	}
 	.bannerAdvantages {
@@ -182,7 +182,9 @@
 		font-size: 2.5vw;
 	}
 	.titleAction {
+		margin-top: 20px;
 		flex-wrap: wrap;
+		border-radius: 10px;
 		p {
 			padding: 10px;
 			font-size: 5vw;
