--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -131,7 +131,7 @@
 
 @media only screen and (max-width: 767px) {
 	.homeBanner {
-		padding: 30px 0px 40px 0px;
+		padding: 40px 0px 40px 0px;
 	}
 	.bannerContainer {
 		margin: 0 6vw;
@@ -147,7 +147,7 @@
 		flex-wrap: wrap;
 		h1 {
 			font-size: 8.125vw;
-			margin-bottom: 50px;
+			margin-bottom: 100px;
 		}
 	}
 	.bannerAdvantages {
@@ -162,27 +162,27 @@
 		display: flex;
 		background-color: $bgDefaultAccentBlock;
 		border-radius: 2.8vw;
-		padding: 4.8vw;
+		padding: 20px 20px;
 		width: 100%;
 		gap: 3pvw;
 		img {
 			position: relative;
-			top: -0.7vw;
-			width: 5.5vw;
-			height: 5.5vw;
+			top: -10px;
+			width: 30px;
+			height: 30px;
 			margin-right: 5px;
 		}
 	}
 
 	.advantageDescriptionMain {
-		font-size: 4.5vw;
+		font-size: 20px;
 		margin-bottom: 1.5vw;
 	}
 	.advantageDescription {
-		font-size: 2.5vw;
+		font-size: 16px;
 	}
 	.titleAction {
-		margin-top: 20px;
+		margin-top: 30px;
 		flex-wrap: wrap;
 		border-radius: 10px;
 		p {
