code rewiews mobile home page03

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap');
 
-$accent: #f3c910ed;
-$fontColor: #989898;
-$fontColorAccent: #d3d3d3d9;
+$accent: #ffd100;
+$fontColor: #d6d6d6;
+$fontColorAccent: #bababae2;
 $black: #202020;
-$white: #c9c9c9;
+$white: #ebebeb;
 
-$bgdefault: hsla(0, 0%, 11%, 0.85);
+$bgdefault: #131313e1;
 $bgDefaultAccent: #212121eb;
 
-$bgDefaultAccentBlock: rgb(21 21 21);
+$bgDefaultAccentBlock: #2d2d2da4;
+
 $default-font: 'Sofia Sans', sans-serif;
 
 $bgblur: -webkit-linear-gradient(
