--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -4,9 +4,8 @@
 	position: sticky;
 	z-index: 100;
 	top: 0;
-	backdrop-filter: blur(6px);
-	background: $bgblur;
-	background: $bgblurIO;
+	backdrop-filter: blur(5px);
+	background-color: #131313e1;
 }
 
 .headerWrapper {
