--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -27,7 +27,7 @@
 		font-size: 3.125vw;
 		line-height: 1;
 		font-weight: bold;
-		color: #989898;
+		color: $fontColor;
 		backdrop-filter: blur(10px);
 		span {
 			color: $accent;
@@ -131,7 +131,7 @@
 
 @media only screen and (max-width: 767px) {
 	.homeBanner {
-		padding: 40px 0px 40px 0px;
+		padding: 20px 0px 40px 0px;
 	}
 	.bannerContainer {
 		margin: 0 6vw;
@@ -147,7 +147,7 @@
 		flex-wrap: wrap;
 		h1 {
 			font-size: 8.125vw;
-			margin-bottom: 80px;
+			margin-bottom: 60px;
 		}
 	}
 	.bannerAdvantages {
@@ -185,6 +185,7 @@
 		margin-top: 30px;
 		flex-wrap: wrap;
 		border-radius: 10px;
+		text-align: center;
 		p {
 			padding: 10px;
 			font-size: 5vw;
