--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -31,6 +31,8 @@
 
 @media only screen and (max-width: 767px) {
 	.containerButtonPortfolio {
+		justify-content: center;
+		width: 100%;
 		img {
 			width: 4.5vw;
 			height: 4.5vw;
