--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -65,11 +65,9 @@
 body {
 	height: 100%;
 	background-color: #202020;
-	// 202020
-	// background-color: #202020;
 	padding: 0;
+	color: $fontColor;
 	margin: 0;
-	color: #fff;
 	min-width: 320px;
 	position: relative;
 	line-height: 1;
