--- a/src/components/wraperPortfolio/WrapperPortfolio.module.scss
+++ b/src/components/wraperPortfolio/WrapperPortfolio.module.scss
@@ -19,11 +19,6 @@
 	justify-content: space-between;
 }
 
-.containerContent {
-	padding: 0px 10px;
-	border-radius: 5px;
-	margin-right: 10px;
-}
 .contentHeaderTitle {
 	font-size: 30px;
 	color: $accent;
@@ -45,8 +40,13 @@
 	background-color: $bgDefaultAccentBlock;
 	gap: 5px;
 	font-size: 1.5em;
-	border: 2px solid #252525;
 	border-radius: 10px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+	.container {
+		margin: 0 20px;
+	}
 }
 @media only screen and (max-width: 767px) {
 	.container {
@@ -55,5 +55,12 @@
 	.containerHeader {
 		flex-wrap: wrap;
 		gap: 20px;
+	}
+	.contentHeaderSubtitle {
+		text-align: center;
+		margin-top: 10px;
+	}
+	.contentHeaderTitle {
+		text-align: center;
 	}
 }
