--- a/src/components/wrapperServices/serviceCard/ServiceCard.module.scss
+++ b/src/components/wrapperServices/serviceCard/ServiceCard.module.scss
@@ -122,11 +122,13 @@
 
 .serviceCardDescription {
 	font-size: 20px;
+	font-weight: 800;
 	color: $fontColorAccent;
 }
 
 .serviceCardPrice {
 	font-size: 20px;
+	font-weight: 800;
 	color: #ffd622;
 }
 
@@ -135,16 +137,62 @@
 	position: absolute;
 	top: -50px; /* Начальное положение за пределами блока */
 	left: 0;
+	font-size: 20px;
 	width: 100%;
-	// padding: 2px;
+	padding: 10px;
 	background-color: rgba(123, 123, 123, 0.7);
 	color: white;
 	font-weight: bold;
 	text-align: center;
 	box-sizing: border-box;
-	transition: top 0.6s ease; /* Плавное изменение положения при hover */
+	transition: top 0.6s ease;
 }
 
 .serviceCard:hover .hoverContent::before {
-	top: 0; /* Положение при hover */
+	top: 0;
+}
+@media only screen and (max-width: 767px) {
+	.serviceCard {
+		position: relative;
+		overflow: hidden;
+		flex: 1 0 49%;
+		height: 230px;
+		border-radius: 10px;
+		background-size: cover;
+		background-position: center;
+		background-color: rgb(52, 52, 52);
+		transition: transform 0.3s ease;
+	}
+	.serviceCardTitle {
+		border-radius: 5px;
+		font-weight: 800;
+		z-index: 10;
+		color: white;
+		font-size: 20px;
+		text-align: left;
+	}
+	.serviceCardDescription {
+		font-size: 15px;
+		font-weight: 800;
+		color: $fontColorAccent;
+	}
+	.hoverText {
+		width: 100%;
+		height: 100%;
+		padding-top: 60px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+	.serviceCardButtonHover {
+		font-size: 12px;
+	}
+	.serviceCardButton {
+		font-size: 12px;
+	}
+	.serviceCardPrice {
+		font-size: 15px;
+		font-weight: 800;
+		color: #ffd622;
+	}
 }
